<package>
  <name>br_bringup</name>
  <version>2.4.2</version>
  <description>
     br_bringup provides roslaunch scripts for starting the  base functionality. 
  </description>
  <author>Tully Foote</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <run_depend>realsense_camera</run_depend>
  <run_depend>astra_launch</run_depend>
  <run_depend>zeroconf_avahi</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>kobuki_capabilities</run_depend>
  <run_depend>kobuki_node</run_depend>
  <run_depend>kobuki_bumper2pc</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>create_node</run_depend>
 <run_depend>turtlebot_capabilities</run_depend>
  <run_depend>br_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>freenect_launch</run_depend>
  <run_depend>laptop_battery_monitor</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend> -->
</package>
