<package>
  <name>br_navigation</name>
  <version>2.3.7</version>
  <description>br_navigation</description>
  <maintainer email="robot@osrfoundation.org">OSRF</maintainer>
  <license>BSD</license>
  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>
  <author>Tully Foote</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
